# Skynet_depot

./: .gitignore  BILAN_FINAL_19NOV.md  BRAINSTORMING_ROADMAP.md  CLAUDE.md  DEVASSIST_COMPLETE_SPECS.md  INSTALL_MEMORY_MCP.md  MCP_SERVERS_GUIDE.md  README.md  ROADMAP_AND_IMPROVEMENTS.md  ROADMAP_ET_BRAINSTORMING.md  SKYNET_MCP_ECOSYSTEM.md  SKYNET_MCP_FINAL_SUMMARY.md  claude-mcp-config.example.json  install-all-mcp.sh  install.sh  quick_diagnostic.ps1  quick_start_relay.ps1
MCP/: INSTALL.md  QUICKSTART.md  README.md  setup.sh
MCP_Browser_LMStudio/: README.md  app.py  browser_controller.py  config.json  lmstudio_client.py  requirements.txt
MCP_KALI_LINUX/: Dockerfile  README.md  docker-compose.yml
MCP_LM_Terminal/: .gitignore  README.md  __init__.py  config.json  lmstudio_client.py  requirements.txt  run.bat  run.sh  server.py  terminal_handler.py
MCP_Server/: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  main.py  requirements.txt  server.py
MCP_SysAdmin/: .gitignore  GUIDE_FRANCAIS.md  README.md  claude_desktop_config.example.json  install.sh  package.json
WebPhoenix-MCP/: .gitignore  CHANGELOG.md  EXAMPLES.md  QUICKSTART.md  README.md  package.json
agent_cli_launcher/: .gitignore  README.md  __init__.py  requirements.txt  run_launcher.py
claude_devbox/: .gitignore  LICENSE  QUICKSTART.md  README.md  docker-compose.yml
clipboardpro_mcp/: .env.example  .gitignore  README.md  package.json
context_injector/: .gitignore  README.md  requirements.txt  run_injector.py
copilot_requests_analysis/: EXPOSE_COMPLET_COPILOT_REQUESTS.md  INTEGRATION_GUIDE.md
devassist-extension/: ARCHITECTURE.md  README.md  manifest.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: INSTALLATION.md  ROADMAP.md  TROUBLESHOOTING.md  USAGE.md
echoterm_mcp/: .gitignore  LICENSE  QUICK_START.md  README.md  start.bat  start.sh
effort_evaluator_mcp/: README.md  package.json
fedora_server_mcp/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  TODO.md  docker-compose.yml  mcp_start.sh
fedora_vm_mcp/: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  entrypoint.sh  launch_vm.sh  quick-start.sh
file_tagger_ai/: README.md
gdrive-space-analyzer/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  gdrive-analyzer.in  meson.build  pyproject.toml  requirements-dev.txt  requirements.txt
gdrive-space-analyzer/docs/: INSTALL.md  OAUTH_SETUP.md  ROADMAP.md
gdrive-space-analyzer/src/: __init__.py  application.py  main.py  window.py
gdrive-space-analyzer/src/core/: __init__.py  account_manager.py  analytics.py  models.py  scanner.py  security.py
gdrive-space-analyzer/src/providers/: __init__.py  base.py  google_drive.py
gdrive-space-analyzer/src/storage/: __init__.py  database.py  schema.sql
gdrive-space-analyzer/src/ui/: __init__.py
gdrive-space-analyzer/src/ui/dialogs/: __init__.py
gdrive-space-analyzer/src/ui/widgets/: __init__.py
gdrive-space-analyzer/src/utils/: __init__.py  config.py  formatters.py  logger.py
gemini-flow-orchestrator/: .env.example  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  turbo.json
grok_cli/: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  SETUP_API_KEYS.md  __init__.py  cli.py  grok.py  requirements.txt  setup.sh
grok_cli_simple/: README.md  config.yaml  grok.py  requirements.txt
local-ai-assistant/: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml
local_llm_mcp/: .env.example  .gitignore  README.md  config.mcp.json  package.json  tsconfig.json
mcp-devops-workspace/: .env.example  .gitignore  README.md  (+3 more)
skynet_memory_visualizer/app/tauri/src-tauri/: Cargo.toml  tauri.conf.json
skynet_memory_visualizer/app/tauri/src-tauri/src/: commands.rs  main.rs
(+1043 files in other folders)
