[package]
name = "skynet-memory-visualizer"
version = "1.0.0"
description = "Skynet Memory Visualizer - RAG Control Center"
authors = ["Skynet"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "dialog-all", "fs-all", "http-all", "shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
